tests/baselines/reference/unicodeExtendedEscapesInStrings12_ES6.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings12_ES6.ts(2,12): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings12_ES6.ts (1 errors) ====
    
    var x = "\u{FFFFFFFF}";
               
!!! error TS1125: Hexadecimal digit expected.
    